# ai-history-researcher

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  coverage.json  docker-compose.yml  next-steps.md  nginx.conf  pyproject.toml  pytest.ini  run_local.py  run_local_dev.py  run_tests.py  test_basic.py  test_endpoints.ps1  test_local_api.py  test_server.py  test_simple_server.py
.claude/agents/: api-integration-agent.md  data-processing-agent.md  deployment-agent.md  documentation-agent.md  research-agent.md  testing-agent.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 265911e4ae85_initial_migration_with_users_table.py  e973616e1393_add_tsvector_column_for_full_text_search.py
data/: research.db
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: dialog.tsx  switch.tsx
frontend/src/components/visualizations/: HistoricalMap.tsx  Timeline.tsx
frontend/src/layout/: MainLayout.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/pages/documents/: DocumentDetails.tsx  DocumentList.tsx
frontend/src/pages/research/: NewResearch.tsx  ResearchList.tsx  ResearchStatus.tsx
frontend/src/pages/search/: SearchPage.tsx
reports/: pytest_report.html  pytest_report.json  test_summary.md  unit_test_report.html  unit_test_report.json
scripts/: init_db.bat  init_db.py  init_db.sql  run_tests_windows.bat  scripts_init_db.sh  test.sh
src/ai_research_framework/: __init__.py  config.py
src/ai_research_framework/analyzers/: __init__.py  ai_analyzer.py
src/ai_research_framework/api/: __init__.py  main.py  middleware.py
src/ai_research_framework/api/routes/: analysis.py  auth.py  documents.py  generate.py  health.py  research.py  search.py
src/ai_research_framework/collectors/: __init__.py  web_scraper.py
src/ai_research_framework/processors/: __init__.py  document_processor.py
src/ai_research_framework/search/: fulltext_search.py  hybrid_search.py  semantic_search.py
src/ai_research_framework/services/: image_service.py  tts_service.py
src/ai_research_framework/storage/: __init__.py  cache.py  database.py  vector_storage.py
src/ai_research_framework/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_local_integration.py
tests/fixtures/: sample_data.py
tests/integration/: test_api_endpoints.py  test_database_integration.py
tests/unit/: test_config.py
tests/unit/analyzers/: test_ai_analyzer.py
tests/unit/processors/: test_document_processor.py
tests/unit/storage/: test_cache.py  test_database.py
tests/unit/utils/: test_logging.py
