[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-research-framework"
version = "1.0.0"
description = "AI-powered research framework for ancient Indian history"
# readme = "README.md"  # Not needed in Docker build
license = {text = "MIT"}
authors = [
    {name = "AI Research Framework Team", email = "rohan.matkar489@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database and storage
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "redis[hiredis]>=5.0.0",
    "chromadb>=0.4.0",
    # HTTP and web scraping
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    # Document processing
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "aiofiles>=23.2.0",
    # AI and ML
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    # Internet Archive
    "internetarchive>=3.5.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "pytest-json-report>=1.5.0",
    "httpx>=0.25.0",
    "faker>=20.1.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.0",
    "responses>=0.24.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "coverage[toml]>=7.3.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "faker>=20.1.0",
    "responses>=0.24.0",
]

[project.scripts]
ai-research-server = "ai_research_framework.api.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_research_framework"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88



[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/ai_research_framework",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=80",
    "--html=reports/pytest_report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=reports/pytest_report.json",
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
    "slow: Slow running tests",
    "external: Tests that require external services",
    "mock: Tests using mocks",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/ai_research_framework"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[dependency-groups]
dev = [
    "faker>=37.5.3",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

